--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,5 @@
+@import url("./owl.carousel.min.css");
+
 @font-face {
     font-family: 'trpi';
     src: url("../fonts/vazir.woff2"),url("../fonts/vazir.eot"),url("../fonts/vazir.woff"),url("../fonts/vazir.ttf"),
@@ -41,6 +43,51 @@
     *{
         font-family: 'trpi';
     }
+}
+
+.trpi_category_carousel{
+
+    a.cat-item {
+        display: flex;
+        background: #fff;
+        margin-bottom: 8px;
+        align-items: center;
+        padding: 16px;
+        color: #000;
+        p {
+            margin: 0;
+        }
+        svg {
+            margin-left: 6px;
+            width: 24px;
+            height: 24px;
+            fill: #494949;
+        }
+    }
+
+    .owl-dots{
+        display: flex !important;
+        justify-content: center;
+        margin: 20px 0;
+        button{
+            margin-left: 8px;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            &:not(.active) {
+                background: #fff !important;
+            }
+            &.active{
+                background: #aaa !important;
+            }
+        }
+    }
+
+    .owl-nav {
+        display: none;
+    }
+
+
 }
 
 .trpi_wrapper_popup{
@@ -189,16 +236,64 @@
             background-size: 35px;
         }
 }
+
+
+
+button#open_popup_embed_code {
+    display: flex;
+    float: left;
+    margin: 16px 0 0;
+    background: transparent;
+    color: #5a5a5a;
+    border: 1px solid #ececec;
+    font-size: 14px;
+    border-radius: 4px;
+    padding: 8px;
+    outline: none;
+    svg {
+        fill: #5a5a5a;
+        margin-left: 8px;
+    }
+    &:hover {
+        background: #5a5a5a;
+        color: #fff;
+        svg {
+            fill: #fff;
+        }
+    }
+}
+
+.trpi_desc_embed_code_wrapper {
+    .trpi_embed_code_holder {
+        text-align: left;
+        min-height: 105px;
+        direction: ltr;
+        border: 2px dashed #bebebe;
+        color: #404040;
+        font-size: 14px;
+        outline: none;
+    }
+    img {
+        display: flex;
+        margin: 16px auto;
+        border-radius: 8px !important;
+        border: 1px solid #eee !important;
+    }
+}
+
+
+
+
 .trpi_badge_holder{
     display: none;
 }
 #company_badge_box{
         width: 140px;
-        background: #000032;
+        background: #fff;
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: #f0f0f0;
+        color: #000032;
         padding: 16px 16px;
         font-size: 14px;
         margin: 16px 0;
@@ -235,7 +330,7 @@
 
 .filter-section {
     background: #fff;
-    border-radius: 4px;
+    border-radius: 8px;
 
     .filter-widget{
         padding: 8px 16px;
@@ -318,30 +413,115 @@
 }
 
 
+.trpi_business_sumary_details {
+    text-align: center;
+    padding: 16px;
+    .image {
+        width: 120px;
+        margin: auto;
+        border: 1px solid #eee;
+        border-radius: 8px;
+    }
+    a.gotopage {
+        font-size: 14px;
+        background: #000032;
+        padding: 8px;
+        display: flex;
+        justify-content: center;
+        color: #fff;
+        border-radius: 4px;
+        width: 250px;
+        margin: auto;
+    }
+    >p{
+        margin: 8px 0;
+        font-size: 14px;
+        text-align: right;
+    }
+    .title {
+        font-size: 20px;
+        font-weight: 900;
+    }
+}
+
+
+
 .buisiness-item {
     display: flex;
+    flex-direction: column;
     background: #fff;
-    border-radius: 4px;
-    align-items: center;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: 0.2s;
     margin-bottom: 16px;
-    > .image {
-        flex-basis: 150px;
+    &:hover{
+        box-shadow: 0 0 20px #aaaaaa5a;
     }
-    > .details {
+    >div:first-child{
         display: flex;
-        flex-direction: column;
-        h4 a {
-            color: #000;
+        align-items: center;
+        >.image {
+            flex-basis: 110px;
+            padding: 8px;
         }
-        .wrapper_review_details {
+        
+        >.details {
             display: flex;
-            align-items: center;
-            p {
-                margin-bottom: 0;
+            flex-direction: column;
+        
+            h4 a {
+                color: #000032;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        
+            .wrapper_review_details {
+                display: flex;
+                align-items: center;
+        
+                p {
+                    margin-bottom: 0;
+                }
             }
         }
     }
-
+    >div:last-child{
+        display: flex;
+        justify-content: space-between;
+        .address{
+            padding: 8px;
+            display: flex;
+            align-items: center;
+            >div {
+                display: flex;
+                align-items: center;
+                margin-left: 8px;
+                border-left: 1px solid #eee;
+                padding-left: 8px;
+                svg {
+                    fill: #7a7a7a;
+                    margin-left: 4px;
+                    width: 16px;
+                }
+                span {
+                    font-size: 12px;
+                    color: #7a7a7a;
+                }
+                &:last-child {
+                    border: 0;
+                }
+            }
+        }
+        .gotopage {
+            background: #aaa;
+            padding: 8px;
+            border-radius: 0 8px 0 0;
+            a {
+                font-size: 13px;
+                color: #fff;
+            }
+        }
+    }    
 }
 
 
@@ -466,8 +646,12 @@ align-items: center;
         padding: 0;
         margin: 0;
         li {
+            padding: 4px 0;
             font-size: 15px;
             margin-bottom: 8px;
+            a{
+                color: #595959;
+            }
             svg {vertical-align: middle;fill: #595959;}
         }
     }
